# piinky

./: .gitignore  CLAUDE.md  README.md  google_calendar_config.json.example  google_credentials.json.example  owm_config.json.example  piinky.sh
.claude/: settings.local.json
backend/: pyproject.toml
backend-go/: README.md  go.mod  go.sum  main.go  main_test.go
backend-go/calendarservice/: calendarservice.go  calendarservice_test.go
backend-go/models/: models.go
backend-go/retry/: retry.go
backend-go/weatherservice/: weatherservice.go  weatherservice_test.go
backend/piinky_backend/: __init__.py  calendar_service.py  main.py  weather_service.py
backend/tests/: __init__.py  conftest.py  test_calendar_service.py  test_main.py  test_weather_service.py
display/: display_service.py  main.py  pyproject.toml
display-go/: .air.toml  go.mod  go.sum  main.go
display-go/display/: display.go
display/tests/: __init__.py  test_display_service.py
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: Calendar.scss  Calendar.test.tsx  Calendar.tsx  CalendarDay.test.tsx  CalendarDay.tsx  Event.tsx  Weather.test.tsx  Weather.tsx
frontend/src/lib/: colormap.ts  utils.ts
frontend/src/test/: setup.ts
frontend/src/types/: calendar.ts  weather.ts
service/: piinky.service
